--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "zustand": "latest"
     },
     "devDependencies": {
+        "@types/howler": "^2.2.12",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
